--- a/tiger-pistats/styles.css
+++ b/tiger-pistats/styles.css
@@ -31,6 +31,10 @@ footer {
     box-sizing: border-box;
 }
 
+.text-footer {
+    margin-top: 20px;
+}
+
 .product-description {
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(8px);
@@ -60,6 +64,7 @@ footer {
     flex-direction: column;
     align-items: center;
     padding: 40px;
+    margin-bottom: 20px;
 
 }
 
